@@ -1,5 +1,11 @@
 -*- text -*-
 
+* Linker map files are now generated with an O(N) algorithm for finding symbols
+  that are defined in each section.  This uses about 40% more memory for
+  symbols than the old O(N^2) algorithm.  You can use the new
+  --reduce-memory-overheads option to select the old algorithm; this option
+  might also be used in the future to select similar tradeoffs.
+
 * New PE --large-address-aware option to indicate executables support virtual
   addresses greater than 2 gigabytes.
 
